# heminetwork

./: .dockerignore  .gitignore  .golangci.yaml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NODE_RUNNING.md  README.md  RELEASE_PROCESS.md  badger.go  codecov.yml  dbtest.go  deny.toml  er.name User  go.mod  go.sum  license_header.txt  runpopminer.sh  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml  renovate.json5
_e2e_fixme/: .env  deploy-config.json  docker-compose.yml  e2e_ext_test.go  entrypointl2.sh  genesisl2.sh  optimism-stack-legacy.Dockerfile  optimism-stack.Dockerfile  postgres.Dockerfile  prestate-proof.json
_localnode_fixme/: docker-compose.yml  docker-compose_mainnet.yml  entrypointl2.sh  gen-files.sh  l2-config.toml  mainnet-entrypointl2.sh  mainnet-l2-config.toml  mainnet-rollup.json
_shit/: holder.go  shit4.go  shit_test.go
api/: api.go
bitcoin/: bitcoin.go  bitcoin_test.go  tbcwallet.go  wallet.go
config/: config.go  config_test.go
crates/trust/: Cargo.toml
crates/trust/src/: lib.rs  trust.rs  trust_db.rs
crates/trust/src/trust/: trust.rs  trust_test.rs
crates/trust/src/trust_db/: trust_db.rs  trust_db_test.rs
crates/trust/src/trust_rpc/: protocol.rs  protocol_test.rs  trust_rpc.rs  trust_rpc_test.rs
database/: database.go  database_test.go
db/: _badger.go  _bitcask.go  _bunt.go  _level.go  _mongo.go  _pebble.go  badger.go  bitcask.go  bunt.go  db.go  level.go  mongo.go  nuts.go  pebble.go
docs/: testutil_guidelines.md
e2e/: .env  HEMITRAP.md  (+28 more)
(+548 files in other folders)
