[package]
name = "trust"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
bitcoin = "=0.32.8"
ethnum = "=1.5.3"
futures-util = "=0.3.32"
hex = "=0.4.3"
base64 = { version = "=0.22.1", default-features = false, features = ["alloc"] }
hmac = "=0.13"
sha2 = "=0.11.0"
rocksdb = "=0.24.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
tokio-tungstenite = { version = "=0.29.0", features = ["rustls-tls-native-roots"] }
tokio-util = "=0.7.18"
tungstenite = "=0.29.0"

[dev-dependencies]
tempfile = "=3.27.0"
